--- a/themes/joshpost/css/layout.css
+++ b/themes/joshpost/css/layout.css
@@ -50,6 +50,8 @@ Pink = #f27182
 
 .pointer:hover { cursor: pointer; }
 
+img { max-width: 100%; }
+
 .contact-info li span {
 	width: 50px;
 	display: inline-block;
@@ -83,43 +85,26 @@ Pink = #f27182
 /* HEADER */
 
 header {
-	width: 250px;
-	height: 100%;
 	background-color: #fff;
 	z-index: 5;
-	position: absolute;
-	left: 0;
-	top: 0;
+	padding-bottom: 1px;
 }
 
 header img { 
 	padding: 10px;
-	display: block;
+	display: none;
 	margin: 0 auto;
-	width: 75px;
-	height: 75px;
 }
 
 header h2 {	padding: 0 15px; }
 header p { padding: 0 10px 0 30px; }
 header nav { margin-top: 30px; }
+header nav #navLinks { margin: 0; }
+header nav #navLinks li a {	color: #2FBC42; }
+header nav #navLinks li { border-bottom: 3px solid transparent; }
+header nav #navLinks li.current { border-bottom: 3px solid #A11222; }
 
-header nav #navLinks li a {
-	display: inline-block;
-	height: 100%;
-	padding: 3px 10px;
-	margin: 5px 10px 5px 3px;
-	color: #2FBC42;
-}
-
-header nav #navLinks li.current { border-left: 3px solid #A11222; }
-header nav #navLinks li.current a {	margin: 5px 10px 5px 0; }
-
-header nav #navLinks li.current a {
-	background-color: transparent;
-	color: #2FBC42;
-	border-bottom: none;
-}
+#navLinks, header .contact-info { padding: 10px 0;}
 
 #externalLinks {
 	margin: 0;
@@ -127,10 +112,9 @@ header nav #navLinks li.current a {
 	border-bottom: none;
 	position: fixed;
 	left: 250px;
+	height: 25px;
 	top: 0;
-	background-color: #2FBC42;
 	border-top: none;
-	box-shadow: 3px 3px 3px #7b7b7b;
 }
 
 #externalLinks li {
@@ -139,7 +123,7 @@ header nav #navLinks li.current a {
 	margin: 5px 0 0;
 	display: inline-block;
 	text-indent: -999em;
-	background-color: #fff;
+	background-color: transparent;
 }
 
 #externalLinks li a {
@@ -148,7 +132,6 @@ header nav #navLinks li.current a {
 	height: inherit;
 	background-position: center;
 	background-size: 100%;
-	background-color: rgba(255, 255, 255, .4);
 	-moz-transition: all 0.3s ease-in-out;
 	-webkit-transition: all 0.3s ease-in-out;
 	/*transition: all 0.5s;*/
@@ -162,25 +145,10 @@ header nav #navLinks li.current a {
 
 /* BODY */
 
-.main {
-	margin-left: 250px;
-	border-left: 1px solid #ededed;
-}
-
-.main .container {
-	padding-top: 50px;
-}
-
-.main h1 {
-	padding-bottom: 10px;
-	margin-bottom: 20px;
-	border-bottom: 2px solid #A11222;
-}
-
+.main .container { padding-top: 50px; }
+.main h1 { padding: 10px; border-bottom: 3px solid #ededed;}
 .main h3,
-.main p {
-	padding: 20px 50px 0;
-}
+.main p { padding: 20px 10px 0; }
 
 .scroll-top {
 	display: none;
@@ -192,8 +160,7 @@ header nav #navLinks li.current a {
 	background-image: url('../images/up-arrow.png');
 	background-size: 20px;
 	background-repeat: no-repeat;
-	background-position: 160px center;
-	box-shadow: 3px 3px 3px #7b7b7b;
+	background-position: 170px center;
 }
 
 
@@ -212,8 +179,6 @@ header nav #navLinks li.current a {
 
 #home-page .container .home-div {
 	margin-bottom: 30px;
-	background-color: #fff;
-	border: 1px solid #ededed;
 	border-bottom: 2px solid #A11222;
 	height: 300px;
 	background-size: cover;
@@ -226,7 +191,6 @@ header nav #navLinks li.current a {
 #home-page .container .home-div h5,
 #home-page .container .home-div p {
 	padding: 5px 30px;
-	background-color: #fff;
 	position: relative;
 	top: -300px;
 }
@@ -284,25 +248,14 @@ header nav #navLinks li.current a {
 
 
 
-#portfolio-page .container {
-	max-width: none;
-    width: 90%;
-}
+#portfolio-page .container { max-width: none; }
 
 #portfolio-page .website-scroll-to-link {
 	height: 200px;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center 33px;
-	border: 1px solid #ededed;
-	margin: .8%;
-	width: 23%;
 	opacity: .6;
 }
 
-#portfolio-page .website-scroll-to-link:hover {
-	opacity: 1;
-}
+#portfolio-page .website-scroll-to-link:hover { opacity: 1; }
 
 #portfolio-page .website-scroll-to-link p {
 	background-color: #fff;
@@ -312,12 +265,9 @@ header nav #navLinks li.current a {
 }
 
 #portfolio-page .website {
-	height: 600px;
-	margin: 50px auto;
-	border: 1px solid #ededed;
-	background-repeat: no-repeat;
-	background-position: center 85px;
-	background-size: 100%;
+	margin: 50px 0;
+	padding:0;
+	border-bottom: 3px solid #A11222;
 }
 
 #portfolio-page .website .website-div-link {
@@ -331,40 +281,19 @@ header nav #navLinks li.current a {
 #portfolio-page .website .website-title {
 	padding: 5px 30px;
 	background-color: #fff;
-	position: relative;
-	top: -600px;
 }
 
 #portfolio-page .website:hover .website-info { display: block; }
-#portfolio-page .website .website-info {
-	display: none;
-	height: 150px;
-	background-color: rgba(0,0,0,.8);
-	border-top: 1px solid #ededed;
-	/*background-repeat: repeat-x;
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#000), to(rgba(0,0,0,0)));
-	background: -webkit-linear-gradient(top, rgba(0,0,0,0), #000);
-	background: -moz-linear-gradient(top, rgba(0,0,0,0), #000);
-	background: -ms-linear-gradient(top, rgba(0,0,0,0), #000);
-	background: -o-linear-gradient(top, rgba(0,0,0,0), #000);*/
-	position: relative;
-	top: -295px;
-	padding: 20px 10px 20px;
-}
-
-#portfolio-page .website .website-info p {
-	padding: 10px 30px;
-	color: #fff;
-}
+#portfolio-page .website .website-info { background-color: rgba(0,0,0,.8); }
+#portfolio-page .website .website-info p { 
+	padding: 10px 20px;
+	margin: 0;
+	color: #fff; }
 
 #portfolio-page .website .website-link {
-	display: inline-block;
-}
-
-#portfolio-page .website .website-link a {
-	padding: 5px 20px;
-	position: absolute;
-	bottom: 10px;	
+	margin: 0;
+	padding: 10px 20px;
+	display: block;
 }
 
 /* BLOG */
@@ -416,32 +345,16 @@ header nav #navLinks li.current a {
 	border-bottom: 1px solid #A11222;
 }
 
-#blog-share-buttons {
-	padding: 0 50px;
-}
+#blog-share-buttons { padding: 0 50px; }
 
 .blog-share-button {
 	width: 106px;
 	display: inline-block;
 }
 
-.blog-entry h1 {
-	padding: 15px 50px;
-}
-
-.blog-entry h3,
-.blog-entry p {
-	border-left: 1px solid #ededed;
-	border-right: 1px solid #ededed;
-}
-
-.blog-entry img {
-	margin-top: 20px;
-}
-
-.blog-entry .tag-start {
-	padding-bottom: 3px;
-}
+.blog-entry h1 { padding: 15px 50px; }
+.blog-entry img { margin-top: 20px; }
+.blog-entry .tag-start { padding-bottom: 3px; }
 
 .blog-entry .tags {
 	padding-top: 0;
@@ -461,35 +374,16 @@ header nav #navLinks li.current a {
 
 /* FOOTER */
 
-footer {
-	margin-left: 250px;
-	background-color: #fff;
-	z-index: 4;
-	border-left: 1px solid #ededed;
-	background-color: #f9f9f9;
-}
+footer .container { padding-top: 10px; }
+footer .container li a:hover { opacity: 1; }
+footer .contact-info { margin-top: 10px;}
 
-footer .container {
-	padding-top: 50px;
-}
-
-footer .container h6,
-footer .container p, 
-footer .container li span	,
-footer .container li a {
-	opacity: .5;
-}
-
-footer .container li a:hover {
-	opacity: 1;
-}
-
-footer .container .footer-info {
+footer .container .footer-info { 
 	margin: 0 auto;
 	padding: 25px 0;
 }
 
-/* LAPTOP LAYOUT */
+/* ========== LAPTOP LAYOUT ========== */
 
 @media only all and (max-width: 1300px) and (min-width: 960px) {
 
@@ -498,13 +392,6 @@ footer .container .footer-info {
 	header {
 		position: static;
 		width: 100%;
-		height: 110px;
-		border-bottom: 1px solid #A11222;
-	}
-
-	header .container {
-		width: 960px;
-		margin: 0 auto;
 	}
 
 	header img {
@@ -514,11 +401,6 @@ footer .container .footer-info {
 		width: 50px;
 	}
 
-	header h2,
-	header p {
-		float: left;
-	}
-
 	header p {
 		margin-top: 33px;
 		padding: 0;
@@ -526,19 +408,9 @@ footer .container .footer-info {
 
 	header nav { margin-top: 0; }
 
-	header nav #navLinks li {
-		float: left;
-	}
-
 	header nav #navLinks li.current {
 		border-left: none;
 		border-bottom: 2px solid #A11222;
-	}
-
-	header .contact-info {
-		position: relative;
-		top: -80px;
-		float: right;
 	}
 
 	#externalLinks {
@@ -575,62 +447,11 @@ footer .container .footer-info {
 	.col.two-thirds { width: 98%; }
 	.col.sixth 		{ width: 48%; }
 
+	.container { width: 100%; }
+
 	/* TABLET HEADER */
 
-	header {
-		position: static;
-		width: 100%;
-		border-bottom: 1px solid #A11222;
-	}
-
-	header .container {
-		width: 100%;
-		margin: 0 auto;
-	}
-
-	header img {
-		margin: 0;
-		float: left;
-		height: 50px;
-		width: 50px;
-	}
-
-	header h2,
-	header p {
-		float: left;
-	}
-
-	header p {
-		margin-top: 0;
-		margin-left: 90px;
-		clear: both;
-		padding: 5px;
-	}
-
-	header nav { margin-top: 0; }
-
-	header nav #navLinks li {
-		float: left;
-	}
-
-	header nav #navLinks li.current {
-		border-left: none;
-		border-bottom: 2px solid #A11222;
-	}
-
-	header .contact-info {
-		position: absolute;
-		top: 0;
-		right: 0;
-		width: 25%;
-		margin: 5px;
-		float: right;
-	}
-
-
-	#externalLinks {
-		display: none;
-	}
+	#externalLinks { display: none; }
 
 	/* TABLET BODY */
 
@@ -645,38 +466,17 @@ footer .container .footer-info {
 		margin: 0 1%;
 	}
 
-	#portfolio-page .website-scroll-to-link {
-		display: none;
-	}
-
-	#portfolio-page .website {
-		height: 450px;
-		margin: 50px auto;
-	}
-
-	#portfolio-page .website .website-title {
-		top: -450px;
-	}
+	#portfolio-page .website-scroll-to-link { display: none; }
+	#portfolio-page .website { margin: 50px auto; }
+	#portfolio-page .website .website-title { top: -450px; }
 
 	#portfolio-page .website .website-info {
 		display: block;
-		top: -300px;
 		height: auto;
 		background-color: #000;
 	}
-	#portfolio-page .website .website-link a {
-		position: static;
-	}
-
-
-	#blog-share-buttons {
-		display: none;
-	}
-	footer {
-		width: 96%;
-		margin: 0 2%;
-		border: none;
-	}
+	#portfolio-page .website .website-link a { position: static; }
+	#blog-share-buttons { display: none; }
 
 }
 
@@ -693,57 +493,9 @@ footer .container .footer-info {
 	.col.two-thirds { width: 98%; }
 	.col.sixth 		{ width: 98%; }
 
-	/* TABLET HEADER */
+	/* MOBILE HEADER */
 
-	header {
-		position: static;
-		width: 100%;
-		border-bottom: 1px solid #A11222;
-	}
-
-	header .container {
-		width: 100%;
-		margin: 0 auto;
-	}
-
-	header img {
-		margin: 0;
-		float: left;
-		height: 50px;
-		width: 50px;
-	}
-
-	header h2,
-	header p {
-		float: left;
-	}
-
-	header p {
-		margin-top: 0;
-		margin-left: 90px;
-		clear: both;
-		padding: 5px;
-	}
-
-	header nav { margin-top: 0; }
-
-	header nav #navLinks li {
-		float: left;
-		width: 25%;
-	}
-
-	header nav #navLinks li.current {
-		border-left: none;
-		border-bottom: 2px solid #A11222;
-	}
-
-	header .contact-info {
-		display: none;	
-	}
-
-	#externalLinks {
-		display: none;
-	}
+	#externalLinks { display: none;	}
 
 	/* TABLET BODY */
 
@@ -763,17 +515,21 @@ footer .container .footer-info {
 	}
 
 	#portfolio-page .website {
-		height: 450px;
-		margin: 50px auto;
+		height: auto;
+		margin: 20px auto 10px;
+	}
+
+	#portfolio-page .website .website-div-link {
+		display: none;
 	}
 
 	#portfolio-page .website .website-title {
-		top: -450px;
+		position: static;
 	}
 
 	#portfolio-page .website .website-info {
 		display: block;
-		top: -300px;
+		position: static;
 		height: auto;
 		background-color: #000;
 	}
@@ -783,13 +539,6 @@ footer .container .footer-info {
 
 	#blog-share-buttons {
 		display: none;
-	}
-
-	footer {
-		width: 92%;
-		margin: 0 2%;
-		padding: 0 2%;
-		border: none;
 	}
 
 }
