Updated to flat layout

--- a/themes/joshpost/css/typography.css
+++ b/themes/joshpost/css/typography.css
@@ -112,8 +112,7 @@ a.application {
 
 /* LIST STYLES  */
 
-ul, 
-ol {
+ul {
 	color: #666; 
 	list-style: none;
 }
@@ -142,8 +141,6 @@ h1 {
 h2 { 
 	color: #000;
 	font-weight: lighter;
-	font-style: italic;
-	text-transform: uppercase;
 	font-size: 2.4em;
 }	
 
@@ -151,8 +148,6 @@ h3 {
 	color:#000;
 	font-size: 1.6em;
 	font-weight: lighter;
-	font-style: italic;
-	text-transform: uppercase;
 }
 
 h4 { 
@@ -234,16 +229,14 @@ td {
 	text-transform: uppercase;
 }
 
-.recessed-title {
-	font-weight: bolder;
-	font-style: italic;
-	text-transform: uppercase;
-}
-
 
 /* HEADER */
 
-header h2 { font-size: 5em; text-align: center;}
+header h2 { 
+	font-size: 6em; 
+	letter-spacing: -6px;
+	text-align: center;
+}
 
 header h2 a {
 	font-family: "Open sans", Helvetica, Arial, sans-serif;
@@ -262,28 +255,44 @@ header p {
 /* Body */
 
 .main h1 {
-	text-transform: uppercase;
-	font-style: italic;
+	letter-spacing: -2px;
 	font-weight: lighter;
 }
 
 /* HOMEPAGE */
 
-#home-page .home-div h2,
-#home-page .home-div h5,
-#home-page .home-div p {
+.home-div h2,
+.home-div h5,
+.home-div p {
 	color: #000;
+	text-align: center;
 }
 
-#home-page .home-div .call-to-action a {
-	font-weight: bold;
-	font-style: italic;
-	font-size: 1.2em;
-	text-transform: uppercase;
+.home-div h2 {
+	color: #fff;
+	font-size: 6em;
+	letter-spacing: -4px;
+	font-weight: normal;
 }
 
-#home-page .container .home-div .home-div-link {
-	text-indent: -999em;
+.home-div h3 a {
+	text-align: center;
+	margin: 2% 0;
+	padding: 10% 0;
+	font-size: 2em;
+	letter-spacing: -3px;
+	background-color: #efefef;
+}
+.home-div p {
+	font-size: 1.4em;
+	color: #fff;
+	background: -moz-radial-gradient(center, ellipse cover,  rgba(0,0,0,1) 0%, rgba(0,0,0,0.99) 1%, rgba(0,0,0,0) 89%, rgba(0,0,0,0) 96%); /* FF3.6+ */
+	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(0,0,0,1)), color-stop(1%,rgba(0,0,0,0.99)), color-stop(89%,rgba(0,0,0,0)), color-stop(96%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+	background: -webkit-radial-gradient(center, ellipse cover,  rgba(0,0,0,1) 0%,rgba(0,0,0,0.99) 1%,rgba(0,0,0,0) 89%,rgba(0,0,0,0) 96%); /* Chrome10+,Safari5.1+ */
+	background: -o-radial-gradient(center, ellipse cover,  rgba(0,0,0,1) 0%,rgba(0,0,0,0.99) 1%,rgba(0,0,0,0) 89%,rgba(0,0,0,0) 96%); /* Opera 12+ */
+	background: -ms-radial-gradient(center, ellipse cover,  rgba(0,0,0,1) 0%,rgba(0,0,0,0.99) 1%,rgba(0,0,0,0) 89%,rgba(0,0,0,0) 96%); /* IE10+ */
+	background: radial-gradient(ellipse at center,  rgba(0,0,0,1) 0%,rgba(0,0,0,0.99) 1%,rgba(0,0,0,0) 89%,rgba(0,0,0,0) 96%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
 /* PORTFOLIO */
@@ -329,6 +338,26 @@ header p {
 	font-size: .8em;
 }
 
+.blog-summary p {
+	font-size: 1.3em;
+	line-height: 1.5em;
+}
+
+.blog-summary .readmore {
+	text-align: right;
+	font-size: .1;
+	font-weight: lighter;
+}
+
+.blog-entry p {
+	font-size: 1.3em;
+	line-height: 1.5em;
+}
+
+.readmore a {
+	color: #7b7b7b;
+}
+
 .tag-start { text-indent: 10px; }
 
 .tag-start, .tags {
@@ -361,8 +390,6 @@ header p {
 	h2 { 
 		color: #000;
 		font-style: lighter;
-		font-style: italic;
-		text-transform: uppercase;
 		font-size: 1.8em;
 	}	
 
