--- a/themes/joshpost/css/typography.css
+++ b/themes/joshpost/css/typography.css
@@ -270,7 +270,7 @@ header p {
 
 .home-div h2 {
 	color: #fff;
-	font-size: 6em;
+	font-size: 4em;
 	letter-spacing: -4px;
 	font-weight: normal;
 }
@@ -285,14 +285,8 @@ header p {
 }
 .home-div p {
 	font-size: 1.4em;
-	color: #fff;
-	background: -moz-radial-gradient(center, ellipse cover,  rgba(0,0,0,1) 0%, rgba(0,0,0,0.99) 1%, rgba(0,0,0,0) 89%, rgba(0,0,0,0) 96%); /* FF3.6+ */
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(0,0,0,1)), color-stop(1%,rgba(0,0,0,0.99)), color-stop(89%,rgba(0,0,0,0)), color-stop(96%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
-	background: -webkit-radial-gradient(center, ellipse cover,  rgba(0,0,0,1) 0%,rgba(0,0,0,0.99) 1%,rgba(0,0,0,0) 89%,rgba(0,0,0,0) 96%); /* Chrome10+,Safari5.1+ */
-	background: -o-radial-gradient(center, ellipse cover,  rgba(0,0,0,1) 0%,rgba(0,0,0,0.99) 1%,rgba(0,0,0,0) 89%,rgba(0,0,0,0) 96%); /* Opera 12+ */
-	background: -ms-radial-gradient(center, ellipse cover,  rgba(0,0,0,1) 0%,rgba(0,0,0,0.99) 1%,rgba(0,0,0,0) 89%,rgba(0,0,0,0) 96%); /* IE10+ */
-	background: radial-gradient(ellipse at center,  rgba(0,0,0,1) 0%,rgba(0,0,0,0.99) 1%,rgba(0,0,0,0) 89%,rgba(0,0,0,0) 96%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+	color: #ededed	;
+	text-align: center;
 }
 
 /* PORTFOLIO */
